--- a/FFTWDep.dist
+++ b/FFTWDep.dist
@@ -1,3 +1,3 @@
-darcs /dependencies/FFTWDep http://openengine.dk/code/dependencies/FFTWDep
+git /dependencies/FFTWDep https://github.com/OpenEngineDK/dependencies-FFTWDep.git
 
 any /dependencies/FFTWDep http://openengine.dk/data/dependencies/fftw-3.2.2.tar.gz
